--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -26,6 +26,12 @@
             }
         }
 
+        .igz-action-panel {
+            .igz-action-item {
+                margin: 0 0 0 5px;
+            }
+        }
+
         .inputs-container {
             width: calc(100% - 30px);
             display: flex;
