--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -96,11 +96,21 @@
                 </igz-validating-input-field>
             </div>
         </div>
-        <div class="three-dot-menu">
+        <div class="three-dot-menu" data-ng-if="::$ctrl.showDotMenu()">
             <igz-action-menu data-actions="$ctrl.actions"
                              data-on-fire-action="$ctrl.onFireAction"
                              data-list-class="$ctrl.listClass">
             </igz-action-menu>
+        </div>
+        <div class="igz-action-panel" data-ng-if="::!$ctrl.showDotMenu()">
+            <div class="actions-list">
+                <div class="igz-action-item"
+                     data-ng-click="$ctrl.onClickAction($ctrl.actions[0])">
+                    <span class="action-icon"
+                          data-ng-class="$ctrl.actions[0].icon">
+                    </span>
+                </div>
+            </div>
         </div>
     </form>
 </div>
