--- a/src/nuclio/common/components/collapsing-row/collapsing-row.less
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.less
@@ -91,4 +91,14 @@
         align-items: flex-start;
         line-height: 51px;
     }
+
+    .single-action {
+        align-items: flex-start;
+
+        .igz-action-panel {
+            .igz-action-item {
+                margin: 4px 0 0 0;
+            }
+        }
+    }
 }
