Impl IG-2117 [Nuclio] Show "Delete" up-front, out of context menu (#451)

--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -20,8 +20,17 @@
             visibility: hidden;
         }
 
+        .igz-action-panel {
+            visibility: hidden;
+            transition: unset;
+
+            .igz-action-item {
+                margin: 0 0 0 5px;
+            }
+        }
+
         &:hover {
-            .three-dot-menu {
+            .three-dot-menu, .igz-action-panel {
                 visibility: visible;
             }
         }
