--- a/src/igz_controls/components/default-dropdown/default-dropdown.tpl.html
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.tpl.html
@@ -50,7 +50,9 @@
             <li class="list-item" tabindex="0"
                 data-ng-repeat="item in $ctrl.getValuesArray() track by $index"
                 data-ng-click="$ctrl.selectItem(item)" data-ng-keydown="$ctrl.onItemKeydown($event, item)"
-                data-ng-class="{'list-item-description': $ctrl.getDescription(item), 'active': $ctrl.isItemSelected(item)}"
+                data-ng-class="{'list-item-description': $ctrl.getDescription(item),
+                                'active': $ctrl.isItemSelected(item),
+                                'disabled': item.disabled}"
                 data-ng-show="item.visible"
                 data-uib-tooltip="{{$ctrl.getTooltip(item)}}"
                 data-tooltip-placement="left"
