Impl [General] Show column resize handle on column header hover

--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -240,4 +240,8 @@
     top: 0;
     right: -1px;
     cursor: col-resize;
+
+    &:active, &.hover {
+        background-color: @light-grey-three;
+    }
 }
