--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -27,6 +27,7 @@
         .code-wrapper-block {
             position: absolute;
             height: 100%;
+            width: 100%;
 
             .igz-scrollable-container {
                 flex-grow: 1;
