--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -168,6 +168,28 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
     }
 }
 
+.wizard-row-description {
+    position: absolute !important;
+    border-radius: 2px;
+    box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.25);
+    background-color: @white;
+    font-family: @font-family-sans-serif;
+    color: @dusk-three;
+    font-size: 12px;
+    padding: 16px 19px;
+    width: 280px;
+    display: none;
+
+    &:before {
+        .triangle-arrow(right; @white; 8px; 10px);
+
+        position: absolute;
+        top: 7px;
+        left: -8px;
+        content: '';
+    }
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
     display: none !important;
 }
