Impl IG-2143 [Services] Add "Undo" icons and actions (#475)

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -615,8 +615,20 @@
     .generateIconClass(a14);
 }
 
-.igz-icon-restart {
+.igz-icon-discard-restart {
     .generateIconClass(a15);
+}
+
+.igz-icon-discard-edit {
+    .generateIconClass(a16);
+}
+
+.igz-icon-discard-delete {
+    .generateIconClass(a17);
+}
+
+.igz-icon-restart {
+    .generateIconClass(a18);
 }
 
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
