--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -22,7 +22,7 @@
                data-ng-disabled="$ctrl.isDisabled"
                data-ng-keydown="$ctrl.keyDown($event)"
                data-igz-input-only-valid-characters="$ctrl.validationPattern"
-               data-only-valid-characters="{{$ctrl.onlyValidCharacters}}"
+               data-only-valid-characters="$ctrl.onlyValidCharacters"
                spellcheck="{{$ctrl.spellcheck}}"
                maxlength="{{$ctrl.onlyValidCharacters ? $ctrl.validationMaxLength : null}}"
                data-igz-input-blur-on-enter>
