Add new GPU fields to resources block

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -38,6 +38,10 @@
                 .memory-size-dropdown, .cpu-dropdown {
                     width: 35%
                 }
+
+                .gpu-number-input {
+                    width: 85%;
+                }
             }
         }
 
