Impl IG-2115 [General] Use new "more info" icon (#449)

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -55,10 +55,14 @@
     .generateIconClass(905);
 }
 
-.igz-icon-help-round {
+.igz-icon-help {
     .generateIconClass(906);
 }
 
+.igz-icon-help-round {
+    .generateIconClass(a19);
+    font-size: 16px;
+}
 
 // header
 .igz-icon-search {
@@ -584,7 +588,7 @@
 }
 
 .igz-icon-services {
-    .generateIconClass(986);
+    .generateIconClass(989);
 }
 
 .igz-icon-external-link {
