--- a/src/igz_controls/components/action-panel/action-panel.less
+++ b/src/igz_controls/components/action-panel/action-panel.less
@@ -43,6 +43,10 @@
             width: 40px;
             z-index: 2;
 
+            &:last-child {
+                margin-right: 0;
+            }
+
             &.inactive {
                 pointer-events: none;
 
