added new keys icon

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -599,6 +599,10 @@
     .generateIconClass(985, 'after');
 }
 
+.igz-icon-key {
+    .generateIconClass(986);
+}
+
 .igz-icon-test-pane {
     .generateIconClass(987);
 }
