--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -587,10 +587,6 @@
     .generateIconClass(983);
 }
 
-.igz-icon-services {
-    .generateIconClass(989);
-}
-
 .igz-icon-external-link {
     .generateIconClass(985);
 }
@@ -599,8 +595,16 @@
     .generateIconClass(985, 'after');
 }
 
+.igz-icon-key {
+    .generateIconClass(986);
+}
+
+.igz-icon-services {
+    .generateIconClass(989);
+}
+
 .igz-icon-test-pane {
-    .generateIconClass(987);
+    .generateIconClass(990);
 }
 
 .igz-icon-format-size {
