IG-2156 [Nuclio] Add "Duplicate" action to functions (fixed)

--- a/src/nuclio/projects/project/functions/duplicate-function-dialog/duplicate-function-dialog.less
+++ b/src/nuclio/projects/project/functions/duplicate-function-dialog/duplicate-function-dialog.less
@@ -5,14 +5,14 @@
             flex-wrap: wrap;
             width: 450px;
 
-            .field-label,
-            .field-input {
-                width: 100% !important;
+            .field-label.function-name-label,
+            .field-input.function-name-input {
+                width: 100%;
             }
 
-            .field-input {
+            .field-input.function-name-input {
                 .error {
-                    top: 38px !important;
+                    top: 38px;
                 }
             }
         }
