--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -25,7 +25,7 @@
             outline: none;
         }
 
-        &:hover, &:focus {
+        &.focused {
             outline: 0;
             border: @number-input-not-disabled-hover-focus-border;
         }
