--- a/src/igz_controls/components/number-input/number-input.tpl.html
+++ b/src/igz_controls/components/number-input/number-input.tpl.html
@@ -1,4 +1,4 @@
-<div class="igz-number-input"
+<div class="igz-number-input" tabindex="0"
      data-ng-class="[{'invalid': $ctrl.checkInvalidation()},
                     {'pristine': !$ctrl.numberInputChanged},
                     {'disabled': $ctrl.isDisabled},
