IG-2171 [Logs] "Control Panel" in staging to "Logs" in production

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -499,6 +499,10 @@
     .generateIconClass(96d);
 }
 
+.igz-icon-logs {
+    .generateIconClass(987);
+}
+
 .ncl-icon-add {
     .generateIconClass(96e);
 }
