added session key field

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -45,6 +45,10 @@
 
                     .ncl-code-entry-url {
                         max-width: 700px;
+
+                        .field-label {
+                            margin-top: 10px;
+                        }
                     }
 
                     .ncl-edit-version-code-form {
