IG-2173 [Nuclio] Function list: add an icon to "View YAML"

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -503,6 +503,10 @@
     .generateIconClass(987);
 }
 
+.igz-icon-view-file {
+    .generateIconClass(98a);
+}
+
 .ncl-icon-add {
     .generateIconClass(96e);
 }
