IG-2169 [Nuclio] Add "Import project" to welcome screen

--- a/src/nuclio/projects/projects-welcome-page/projects-welcome-page.less
+++ b/src/nuclio/projects/projects-welcome-page/projects-welcome-page.less
@@ -63,12 +63,14 @@
 
         .ncl-new-entity-button {
             height: 39px;
+            width: 190px;
             font-size: 14px;
             padding: 12px 31px;
             background-image: linear-gradient(5deg, @orangish, @pale-orange);
 
             &:hover {
                 background: @dark-orange;
+                cursor: pointer;
             }
         }
     }
