Impl IG-2171,2173[Logs]Add Logs icon;[Nuclio]Add icon to view YAML(#498)

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -499,6 +499,14 @@
     .generateIconClass(96d);
 }
 
+.igz-icon-logs {
+    .generateIconClass(987);
+}
+
+.igz-icon-view-file {
+    .generateIconClass(98a);
+}
+
 .ncl-icon-add {
     .generateIconClass(96e);
 }
