Impl IG-2167 [General] `igzNumberInput`: Empty ---up--> min value (#494)

--- a/src/igz_controls/components/number-input/number-input.tpl.html
+++ b/src/igz_controls/components/number-input/number-input.tpl.html
@@ -1,7 +1,8 @@
-<div class="igz-number-input"
+<div class="igz-number-input" tabindex="0"
      data-ng-class="[{'invalid': $ctrl.checkInvalidation()},
                     {'pristine': !$ctrl.numberInputChanged},
                     {'disabled': $ctrl.isDisabled},
+                    {'focused': $ctrl.inputFocused},
                     {'submitted': $ctrl.formObject.$submitted}]">
     <div class="additional-left-block">
         <span class="prefix-unit" data-ng-show="$ctrl.isShownUnit($ctrl.prefixUnit)">{{$ctrl.prefixUnit}}</span>
