Impl [Nuclio] Add container & sub-path to V3IO volume

--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -24,6 +24,7 @@
                data-igz-input-only-valid-characters="$ctrl.validationPattern"
                data-only-valid-characters="$ctrl.onlyValidCharacters"
                spellcheck="{{$ctrl.spellcheck}}"
+               autocomplete="{{$ctrl.autoComplete}}"
                maxlength="{{$ctrl.onlyValidCharacters ? $ctrl.validationMaxLength : null}}"
                data-igz-input-blur-on-enter>
 
