added sub-text class

--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -38,6 +38,11 @@
         position: relative;
         text-overflow: ellipsis;
 
+        .item-cell-sub-tex {
+            font-size: 12px;
+            color: @item-cell-sub-text-color;
+        }
+
         &.element-loading-status-wrapper .element-loading-status {
             height: auto;
         }
