IG-2170 fixed dropdown select issue

--- a/src/igz_controls/components/default-dropdown/default-dropdown.tpl.html
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.tpl.html
@@ -49,7 +49,7 @@
         <ul class="list" tabindex="-1">
             <li class="list-item" tabindex="0"
                 data-ng-repeat="item in $ctrl.getValuesArray() track by $index"
-                data-ng-click="$ctrl.selectItem($event, item)" data-ng-keydown="$ctrl.onItemKeydown($event, item)"
+                data-ng-click="$ctrl.selectItem(item, $event)" data-ng-keydown="$ctrl.onItemKeydown($event, item)"
                 data-ng-class="{'list-item-description': $ctrl.getDescription(item),
                                 'active': $ctrl.isItemSelected(item),
                                 'disabled': item.disabled}"
