Impl [Nuclio] Add Token to Github code-entry type
Also rename "Session key" fields to "Access key".

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -137,7 +137,7 @@
 
             <div class="igz-col-45 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.secretRef.name)">
-                <div class="field-label">Session key</div>
+                <div class="field-label">Access key</div>
                 <igz-validating-input-field class="nuclio-validating-input"
                                             data-field-type="password"
                                             data-auto-complete="current-password"
