--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -31,9 +31,6 @@
 
             <div class="igz-col-70 item-info">
                 <div data-ng-hide="$ctrl.item.ui.editModeActive" class="collapsed-item-info-block">
-                    <span data-ng-if="!$ctrl.isNil($ctrl.item.workerAllocatorName)">
-                        <span class="field-label">Worker allocator name</span>:&nbsp;{{ $ctrl.item.workerAllocatorName }};&nbsp;
-                    </span>
                     <span data-ng-if="!$ctrl.isNil($ctrl.item.url)">
                         <span class="field-label">URL</span>:&nbsp;{{ $ctrl.item.url }};&nbsp;
                     </span>
@@ -74,6 +71,11 @@
                     </span>
                     <span data-ng-if="!$ctrl.isNil($ctrl.item.volume.configMap.name)">
                         <span class="field-label">Config map name</span>:&nbsp;{{ $ctrl.item.volume.configMap.name }};&nbsp;
+                    </span>
+
+                    <!-- Worker Allocator name -->
+                    <span data-ng-if="!$ctrl.isNil($ctrl.item.workerAllocatorName)">
+                        <span class="field-label">Worker allocator name</span>:&nbsp;{{ $ctrl.item.workerAllocatorName }};&nbsp;
                     </span>
                 </div>
 
